--- a/Classes.html
+++ b/Classes.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <!-- ======= Styles ====== -->
-    <link rel="stylesheet" href="C:\Users\ayoun\OneDrive\Desktop\life career\lifecareer html\FinalDashboard\test.css">
+    <link rel="stylesheet" href="./test.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                 </li>
 
                 <li>
-                    <a href="C:\Users\ayoun\OneDrive\Desktop\life career\lifecareer html\FinalDashboard\index.html">
+                    <a href="https://wlaantamnenlms.github.io/lms.github.io/">
                         <span class="icon">
                             <ion-icon name="home-outline"></ion-icon>
                         </span>
@@ -154,7 +154,7 @@
     <li>
       <h3>Class Title</h3>
       <p>Class Description</p>
-      <a href="C:\Users\ayoun\OneDrive\Desktop\life career\lifecareer html\FinalDashboard\classView.html">View Class</a>
+      <a href="./classView.html">View Class</a>
       <button class="edit-button">Edit</button>
       <button class="delete-button">Delete</button>
     </li>
@@ -162,14 +162,14 @@
     <li>
       <h3>Class Title</h3>
       <p>Class Description</p>
-      <a href="C:\Users\ayoun\OneDrive\Desktop\life career\lifecareer html\FinalDashboard\classView.html">View Class</a>
+      <a href="./classView.html">View Class</a>
       <button class="edit-button">Edit</button>
       <button class="delete-button">Delete</button>
     </li>
     <li>
       <h3>Class Title</h3>
       <p>Class Description</p>
-      <a href="C:\Users\ayoun\OneDrive\Desktop\life career\lifecareer html\FinalDashboard\classView.html">View Class</a>
+      <a href="./classView.html">View Class</a>
       <button class="edit-button">Edit</button>
       <button class="delete-button">Delete</button>
     </li>
@@ -200,7 +200,7 @@
                 <!-- ================= New Customers ================ -->
 
     <!-- =========== Scripts =========  -->
-    <script src="C:\Users\ayoun\OneDrive\Desktop\life career\lifecareer html\FinalDashboard\test.js"></script>
+    <script src="./test.js"></script>
 
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
